Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67368

QJSValue::strictlyEquals documentation error

XMLWordPrintable

    • 50c58e152 (dev), 8c20df459 (6.9), 70b999b2e (6.8), 22a9466bd (tqtc/lts-6.5)
    • framework-content 6, framework-content 7

      Boolean true if both values are true, false otherwise

      this is incorrect.

      Actually for Boolean strictlyEquals returns true when both values are 'false'.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andreas.eliasson Andreas Eliasson
            taurus Ivan Romanov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes