Doc: Fix QJSValue::strictlyEquals boolean description

For Boolean, strictlyEquals also returns true when both
values are false.

Fixes: QTBUG-67368
Change-Id: Ib9accb9f1831139a7497899bd8ad43e7c441ff71
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 50c58e152524df0b75daf948213d5cfd4e9b491a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 8c20df459eb2c6ac51f3554be9daf1be6c8fab6d)
(cherry picked from commit 70b999b2e720442460d1b5b523574abbc29f09f2)